{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 38,
  "lineage": "46c80e5f-0574-4091-fa79-288cd36ad186",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nshm_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:985539788320:loadbalancer/app/nshm-alb/7896a722e1996e0a",
            "arn_suffix": "app/nshm-alb/7896a722e1996e0a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nshm-alb-1094330103.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:985539788320:loadbalancer/app/nshm-alb/7896a722e1996e0a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nshm-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0496af1b626c880e7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006bc2a3ad9abca2b"
              },
              {
                "subnet_id": "subnet-0f788325d8bd0b944"
              }
            ],
            "subnets": [
              "subnet-006bc2a3ad9abca2b",
              "subnet-0f788325d8bd0b944"
            ],
            "tags": {
              "Name": "nshm-alb"
            },
            "tags_all": {
              "Name": "nshm-alb"
            },
            "vpc_id": "vpc-05448d5001b6a4cb2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.nus-secondhand-market"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:985539788320:listener/app/nshm-alb/7896a722e1996e0a/eec230297e43a1b9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:985539788320:listener/app/nshm-alb/7896a722e1996e0a/eec230297e43a1b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:985539788320:loadbalancer/app/nshm-alb/7896a722e1996e0a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.nshm_alb",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nshm_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:985539788320:targetgroup/nshm-target-group/1f66cd317636b826",
            "arn_suffix": "targetgroup/nshm-target-group/1f66cd317636b826",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:985539788320:targetgroup/nshm-target-group/1f66cd317636b826",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nshm-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:security-group/sg-0496af1b626c880e7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0496af1b626c880e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "985539788320",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.nus-secondhand-market"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nus-secondhand-market",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:internet-gateway/igw-05d53ce7b85de97c9",
            "id": "igw-05d53ce7b85de97c9",
            "owner_id": "985539788320",
            "tags": {
              "Name": "nus-secondhand-market-igw"
            },
            "tags_all": {
              "Name": "nus-secondhand-market-igw"
            },
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:route-table/rtb-04a81d2c1b1d37d8e",
            "id": "rtb-04a81d2c1b1d37d8e",
            "owner_id": "985539788320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d53ce7b85de97c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nus-secondhand-market-public-route-table"
            },
            "tags_all": {
              "Name": "nus-secondhand-market-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.nus-secondhand-market",
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8942383fd5a6554",
            "route_table_id": "rtb-04a81d2c1b1d37d8e",
            "subnet_id": "subnet-0f788325d8bd0b944"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.nus-secondhand-market",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb7580e2e9c47865",
            "route_table_id": "rtb-04a81d2c1b1d37d8e",
            "subnet_id": "subnet-006bc2a3ad9abca2b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.nus-secondhand-market",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nus-secondhand-market",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:security-group/sg-07b0c5e480023345b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b0c5e480023345b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "nus-secondhand-market-sg",
            "name_prefix": "",
            "owner_id": "985539788320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nus-secondhand-market-sg"
            },
            "tags_all": {
              "Name": "nus-secondhand-market-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:subnet/subnet-0e24b0144c0092c47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e24b0144c0092c47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985539788320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nus-secondhand-market-private-subnet-1"
            },
            "tags_all": {
              "Name": "nus-secondhand-market-private-subnet-1"
            },
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:subnet/subnet-038e79a626ee0912f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038e79a626ee0912f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985539788320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nus-secondhand-market-private-subnet-2"
            },
            "tags_all": {
              "Name": "nus-secondhand-market-private-subnet-2"
            },
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.nus-secondhand-market"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:subnet/subnet-0f788325d8bd0b944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f788325d8bd0b944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985539788320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nus-secondhand-market-public-subnet-1"
            },
            "tags_all": {
              "Name": "nus-secondhand-market-public-subnet-1"
            },
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.nus-secondhand-market"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:subnet/subnet-006bc2a3ad9abca2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006bc2a3ad9abca2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985539788320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nus-secondhand-market-public-subnet-2"
            },
            "tags_all": {
              "Name": "nus-secondhand-market-public-subnet-2"
            },
            "vpc_id": "vpc-05448d5001b6a4cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.nus-secondhand-market"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nus-secondhand-market",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:985539788320:vpc/vpc-05448d5001b6a4cb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c92734b7ea32d98",
            "default_route_table_id": "rtb-09b2f9634a77d5048",
            "default_security_group_id": "sg-03dae0596e759d08d",
            "dhcp_options_id": "dopt-05d775bcfb205a258",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05448d5001b6a4cb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b2f9634a77d5048",
            "owner_id": "985539788320",
            "tags": {
              "Name": "nus-secondhand-market"
            },
            "tags_all": {
              "Name": "nus-secondhand-market"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}